first commit. - add binForGzip option on osgjs plugin - add osgOffScreenRender example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -186,6 +186,8 @@ IF(DYNAMIC_OPENSCENEGRAPH)
 
     ADD_SUBDIRECTORY(osgpdf)
 
+	ADD_SUBDIRECTORY(osgOffScreenRender)
+
     IF   (GLUT_FOUND)
         ADD_SUBDIRECTORY(osgviewerGLUT)
     ENDIF(GLUT_FOUND)
